[071407] Fixes second flex column width on IE

--- a/assets/css/programming_package.css
+++ b/assets/css/programming_package.css
@@ -84,6 +84,10 @@
         flex-direction: row;
     }
 
+    .flex-item {
+        width: 33.333%;
+    }
+
     .flex-item.layout {
         width: 66.666%;
         margin-right: 24px;
